--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marina Wooden</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital@0;1&family=Poller+One&family=Rammetto+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital@1&family=Inter+Tight&family=Poller+One&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
@@ -30,17 +30,18 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">About Me</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Portfolio + Resume</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#welcome">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about-me">About Me</a></li>
+          <li class="nav-item"><a class="nav-link" href="#work">Portfolio + Resume</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact-me">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <section id="welcome" class="min-vh-100 d-flex flex-column justify-content-center align-items-center">
-    <h1 class="fade-in">Hello!</h1>
-    <p>Lorem ipsum dolor</p>
+    <h1 class="wiggle">Hello!</h1>
+    <p>I'm Marina and I like building things on the web.</p>
+    <p class="bottom-page">(This is your cue to start scrolling, if you'd like)</p>
   </section>
   <section id="about-me" class="min-vh-100 p-3 bg-secondary bg-opacity-25 d-flex">
     <div>
@@ -54,7 +55,7 @@
       </p>
     </div>
   </section>
-  <section class="min-vh-100 p-3 bg-secondary bg-opacity-50">
+  <section id="work" class="min-vh-100 p-3 bg-secondary bg-opacity-50">
     <h2>Portfolio + Resume</h2>
     <div class="d-flex flex-column align-items-center">
       <article class="p-3 board">
@@ -83,7 +84,7 @@
       </article>
     </div>
   </section>
-  <section class="min-vh-100 p-3 bg-secondary bg-opacity text-primary">
+  <section id="contact-me" class="min-vh-100 p-3 bg-secondary bg-opacity text-primary">
     <h2>Contact Me</h2>
   </section>
 </body>
