--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marina Wooden</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital@1&family=Inter+Tight&family=Poller+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@700&family=Inter+Tight&family=Poller+One&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
@@ -44,12 +44,12 @@
     <p class="bottom-page">(This is your cue to start scrolling, if you'd like)</p>
   </section>
   <section id="about-me" class="min-vh-100 p-3 bg-secondary bg-opacity-25 d-flex">
-    <div>
+    <div class="p-2">
       <h2>About Me</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam earum cum iure ducimus optio ad corporis libero aliquam expedita esse facere at laborum reiciendis, quaerat doloribus eveniet minima. Vel, labore.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci possimus eaque, reprehenderit veniam molestiae ab facere consequuntur ut tempore a suscipit nulla maxime? Omnis vitae, assumenda voluptas exercitationem dolore doloremque.</p>
+      <p>Hi!  I'm Marina Wooden - an informatics student at the University of Washington.  I focus mostly on software development, especially anything related to the web.  I got into coding by creating templates for blogs in high school, which I thought was embarassing until I learned there was a whole generation of programmers who got their start by coding MySpace templates, so I guess it's not all that bad.</p>
+      <p>In addition to being a student, I am also a TA for Web Programming (CSE 154) at the UW.  It's my favorite job that I've had so far, and I love being able to teach other people about one of my greatest interests.  If you're reading this and you were/are in my section- HI!</p>
     </div>
-    <div>
+    <div class="p-2">
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores sint ducimus, aspernatur ratione est adipisci eum laudantium modi distinctio cumque unde ad? Magnam eos quod, esse vel at dolores earum!
       </p>
@@ -57,30 +57,40 @@
   </section>
   <section id="work" class="min-vh-100 p-3 bg-secondary bg-opacity-50">
     <h2>Portfolio + Resume</h2>
+    <h3>Current work</h3>
     <div class="d-flex flex-column align-items-center">
+      <article class="p-3 board">
+        <h3>Musicroom</h3>
+        <time>2022</time>
+        <p>I am currently working with other Informatics students to create a mobile application for student musicians to engage and share their work.</p>
+        <a href="">Link to project</a>
+      </article>
+    </div>
+    <h3>Finished Projects</h3>
+    <div class="d-flex flex-column align-items-center">
+      <article class="p-3 board">
+        <h3>First Project</h3>
+        <time>2022</time>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum aliquam sit molestias? Cumque vel ullam unde temporibus quasi beatae velit quod totam eum, quis sint, et nemo! Quod, nostrum omnis.</p>
+        <a href="">Link to project</a>
+      </article>
+      <svg stroke="#000000" stroke-width="2" width="2" height="25">
+        <line x1="0" y1="0" x2="0" y2="25"></line>
+      </svg>
+      <article class="p-3 board">
+        <h3>88x31 button maker</h3>
+        <time>2020-2022</time>
+        <p>I have an interest in old, geocities-era personal homepages, and something I noticed was a lot of these websites have a 88x31 button to advertise themselves.  I thought it would be nice to create a website to make it easy to create these buttons from scratch</p>
+        <a href="https://hekate2.github.io/buttonmaker/">Link to project</a>
+      </article>
+      <svg stroke="#000000" stroke-width="2" width="2" height="25">
+        <line x1="0" y1="0" x2="0" y2="25"></line>
+      </svg>
       <article class="p-3 board">
         <h3>Website Builder</h3>
         <time>2022</time>
-        <p>Simple website builder, allows users with minimal exposure to web programming concepts to simply create a website</p>
-        <a href="">Link to project</a>
-      </article>
-      <svg stroke="#000000" stroke-width="2" width="2" height="25">
-        <line x1="0" y1="0" x2="0" y2="25"></line>
-      </svg>
-      <article class="p-3 board">
-        <h3>Second Project</h3>
-        <time>2022</time>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum aliquam sit molestias? Cumque vel ullam unde temporibus quasi beatae velit quod totam eum, quis sint, et nemo! Quod, nostrum omnis.</p>
-        <a href="">Link to project</a>
-      </article>
-      <svg stroke="#000000" stroke-width="2" width="2" height="25">
-        <line x1="0" y1="0" x2="0" y2="25"></line>
-      </svg>
-      <article class="p-3 board">
-        <h3>Third Project</h3>
-        <time>2022</time>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum aliquam sit molestias? Cumque vel ullam unde temporibus quasi beatae velit quod totam eum, quis sint, et nemo! Quod, nostrum omnis.</p>
-        <a href="">Link to project</a>
+        <p>Simple website builder, allows users with minimal exposure to web programming concepts to simply create a website.  I made it when I noticed there were a lot of people online who wanted websites but didn't have a need to learn html or css.</p>
+        <a href="https://layoutbuilder.herokuapp.com/">Link to project</a>
       </article>
     </div>
   </section>
