--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   <script src="index.js"></script>
 </head>
@@ -32,8 +33,9 @@
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link active" href="#welcome">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about-me">About Me</a></li>
-          <li class="nav-item"><a class="nav-link" href="#work">Portfolio + Resume</a></li>
+          <li class="nav-item"><a class="nav-link" href="#work">Work + Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact-me">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://drive.google.com/file/d/1Idkf7UPWKg5zZi5ifLCCOgoofCqptxCg/view?usp=sharing">Resume</a></li>
         </ul>
       </div>
     </div>
@@ -43,59 +45,83 @@
     <p>I'm Marina and I like building things on the web.</p>
     <p class="bottom-page">(This is your cue to start scrolling, if you'd like)</p>
   </section>
-  <section id="about-me" class="min-vh-100 p-3 bg-secondary bg-opacity-25 d-flex">
+  <section id="about-me" class="text-center text-md-start min-vh-100 p-3 bg-secondary text-primary d-sm-flex align-items-lg-center">
     <div class="p-2">
-      <h2>About Me</h2>
-      <p>Hi!  I'm Marina Wooden - an informatics student at the University of Washington.  I focus mostly on software development, especially anything related to the web.  I got into coding by creating templates for blogs in high school, which I thought was embarassing until I learned there was a whole generation of programmers who got their start by coding MySpace templates, so I guess it's not all that bad.</p>
+      <h2 class="scroll fade-in">About Me</h2>
+      <img src="img/me.jpg" alt="Marina at the Louvre" class="d-sm-none w-100 m-2 scroll fade-in">
+      <p>Hi!  I'm Marina Wooden - an Informatics student at the University of Washington.  I focus mostly on software development, especially anything related to the web.  I also have a personal interest in data analysis, and figuring out things that are going on in the world by analyzing them on my own.  I got into coding by creating templates for blogs in high school, and then I eventually found out that I could also use technology to <a href="#current-events">explore current events in the world</a> that I'm passionate about.</p>
       <p>In addition to being a student, I am also a TA for Web Programming (CSE 154) at the UW.  It's my favorite job that I've had so far, and I love being able to teach other people about one of my greatest interests.  If you're reading this and you were/are in my section- HI!</p>
     </div>
-    <div class="p-2">
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores sint ducimus, aspernatur ratione est adipisci eum laudantium modi distinctio cumque unde ad? Magnam eos quod, esse vel at dolores earum!
-      </p>
+    <div class="p-2 d-none d-sm-block">
+      <img class="scroll fade-in" src="img/me.jpg" alt="Marina at the Louvre">
     </div>
   </section>
-  <section id="work" class="min-vh-100 p-3 bg-secondary bg-opacity-50">
-    <h2>Portfolio + Resume</h2>
-    <h3>Current work</h3>
-    <div class="d-flex flex-column align-items-center">
-      <article class="p-3 board">
-        <h3>Musicroom</h3>
-        <time>2022</time>
-        <p>I am currently working with other Informatics students to create a mobile application for student musicians to engage and share their work.</p>
-        <a href="">Link to project</a>
-      </article>
+  <section id="work" class="min-vh-100 p-3 bg-primary text-secondary">
+    <h2>Work + Projects</h2>
+    <div class="workboard my-5">
+      <h3>Current work</h3>
+      <div class="d-flex flex-column align-items-center">
+        <article class="p-3 board scroll slide-in">
+          <h3>Teaching Assistant</h3>
+          <time>2022</time>
+          <p>In December 2021 I was hired as to be a teaching assistant for CSE 154, Web Programming.  My responsibilities are teaching section content twice weekly, grading assignments and holding office hours.  As section lead I am also responsible for reviewing and restructuring section material.</p>
+          <a href="https://courses.cs.washington.edu/courses/cse154/22au/staff/about-me/marina-wooden/index.html">Link to my TA homepage</a>
+        </article>
+        <svg class="scroll pop-in" stroke="#000000" stroke-width="2" width="2" height="25">
+          <line x1="0" y1="0" x2="0" y2="25"></line>
+        </svg>
+        <article class="p-3 board scroll slide-in">
+          <h3>Musicroom</h3>
+          <time>2022</time>
+          <p>I am currently working with other Informatics students to create a mobile application for student musicians to engage and share their work.</p>
+          <a href="https://marinawooden.github.io/MusicRoom.io/">Link to project</a>
+        </article>
+      </div>
     </div>
-    <h3>Finished Projects</h3>
-    <div class="d-flex flex-column align-items-center">
-      <article class="p-3 board">
-        <h3>First Project</h3>
-        <time>2022</time>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum aliquam sit molestias? Cumque vel ullam unde temporibus quasi beatae velit quod totam eum, quis sint, et nemo! Quod, nostrum omnis.</p>
-        <a href="">Link to project</a>
-      </article>
-      <svg stroke="#000000" stroke-width="2" width="2" height="25">
-        <line x1="0" y1="0" x2="0" y2="25"></line>
-      </svg>
-      <article class="p-3 board">
-        <h3>88x31 button maker</h3>
-        <time>2020-2022</time>
-        <p>I have an interest in old, geocities-era personal homepages, and something I noticed was a lot of these websites have a 88x31 button to advertise themselves.  I thought it would be nice to create a website to make it easy to create these buttons from scratch</p>
-        <a href="https://hekate2.github.io/buttonmaker/">Link to project</a>
-      </article>
-      <svg stroke="#000000" stroke-width="2" width="2" height="25">
-        <line x1="0" y1="0" x2="0" y2="25"></line>
-      </svg>
-      <article class="p-3 board">
-        <h3>Website Builder</h3>
-        <time>2022</time>
-        <p>Simple website builder, allows users with minimal exposure to web programming concepts to simply create a website.  I made it when I noticed there were a lot of people online who wanted websites but didn't have a need to learn html or css.</p>
-        <a href="https://layoutbuilder.herokuapp.com/">Link to project</a>
-      </article>
+    <div class="workboard my-5">
+      <h3>Finished Projects</h3>
+      <div class="projects d-flex flex-column align-items-center">
+        <article class="p-3 board scroll slide-in">
+          <h3>88x31 button maker</h3>
+          <time>2020-2022</time>
+          <p>I have an interest in old, geocities-era personal homepages, and something I noticed was a lot of these websites have a 88x31 button to advertise themselves.  I thought it would be nice to create a website to make it easy to create these buttons from scratch</p>
+          <a href="https://hekate2.github.io/buttonmaker/">Link to project</a>
+        </article>
+        <svg class="scroll pop-in" stroke="#000000" stroke-width="2" width="2" height="25">
+          <line x1="0" y1="0" x2="0" y2="25"></line>
+        </svg>
+        <article class="p-3 board scroll slide-in">
+          <h3>Website Builder</h3>
+          <time>2022</time>
+          <p>Simple website builder, allows users with minimal exposure to web programming concepts to simply create a website.  I made it when I noticed there were a lot of people online who wanted websites but didn't have a need to learn html or css.</p>
+          <a href="https://layoutbuilder.herokuapp.com/">Link to project</a>
+        </article>
+        <svg class="scroll pop-in" stroke="#000000" stroke-width="2" width="2" height="25">
+          <line x1="0" y1="0" x2="0" y2="25"></line>
+        </svg>
+        <article id="current-events" class="p-3 board scroll slide-in">
+          <h3>An Analysis of Native American Children in Foster Care in Clark County, WA</h3>
+          <time>2021</time>
+          <p>In the summer of 2021, I worked with public defenders to create a data visualization to map discrepancies between Native and non-Native American children in the foster care system in Clark County, WA.  My findings were used in court to achieve better outcomes for foster care placements for Native American children.</p>
+          <a href="https://marinawooden.github.io/children-in-foster-care/">Link to project</a>
+        </article>
+        <svg class="scroll pop-in" stroke="#000000" stroke-width="2" width="2" height="25">
+          <line x1="0" y1="0" x2="0" y2="25"></line>
+        </svg>
+        <article class="p-3 board scroll slide-in">
+          <h3>Police Killings Map</h3>
+          <time>2020</time>
+          <p>As a part of my introduction to data science, I worked with a database of police killings to map where they were occuring and who was being targeted.  Through working on this I was not only able to visualize this phenomenon, but also understand it on my own to a higher degree.</p>
+          <a href="https://fc-12.shinyapps.io/police_brutality/">Link to project</a>
+        </article>
+    </div>
     </div>
   </section>
-  <section id="contact-me" class="min-vh-100 p-3 bg-secondary bg-opacity text-primary">
-    <h2>Contact Me</h2>
+  <section id="contact-me" class="text-center min-vh-100 p-3 bg-secondary text-primary d-flex flex-column align-items-center justify-content-center">
+    <h2>Contact Me!</h2>
+    <p>If you'd like to get in touch with me about anything at all, you can find me here! ↴</p>
+    <a href="mailto:mwoode@uw.edu" class="btn btn-outline-light m-2"><i class="bi bi-envelope"></i> mwoode@uw.edu</a>
+    <a href="https://www.linkedin.com/in/marina-wooden-315078211/" class="btn btn-outline-light m-2"><i class="bi bi-linkedin"></i> LinkedIn</a>
   </section>
 </body>
 </html>
